Add Notes on output

--- a/transformer_decoder_training/jupyter_notebooks/understanding_transformers/Transformer_decoder_only/Transformer_decoder_v1.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/understanding_transformers/Transformer_decoder_only/Transformer_decoder_v1.ipynb
@@ -3661,6 +3661,31 @@
     }
    ],
    "execution_count": 51
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "Funktioniert im generellen nicht wirklich gut.\n",
+    "\n",
+    "Probleme:\n",
+    "\n",
+    "- Es werden nur 0 bis 7 Tokens vorhergesagt, obwohl eig. 50 tokens vorhergesagt werden sollen und auch auf mehr trainiert wird.\n",
+    "- Die Töne, die gespielt werden passen musikalisch nicht gut zusammen\n",
+    "- Er ist sich generell für alle töne sehr unsicher: output range nach sigmoid ist meistens zwischen 0 und 0.15\n",
+    "\n",
+    "Potentielle Ursachen:\n",
+    "\n",
+    "- Ich mache generell irgendwo einen Fehler in der Transformerstruktur\n",
+    "- Das training passt nicht für einen Encoder-decoder Only -> Ich mache ja nicht wirklich eine sequentielle vorhersage sondern versuche quasi eher eine Übersetzung -> von rechter auf linke hand\n",
+    "- Die Snapshots müssen irgendwie anders tokenized werden. -> in allen textgenerierungstasks ist die eingabesquenz vor dem embedding geringer -> nur zahlen anstatt einem Vektor -> evtl. eigenen Tokenizer schreiben?\n",
+    "- **Keine eigene Kostenfunktion**\n",
+    "- inferenz muss anders gemacht werden\n",
+    "- Ist sigmoid-funktion im forward schritt wirklich notwendig oder am besten erst ganz am schluss"
+   ],
+   "id": "8ad1d5778207bb56"
   }
  ],
  "metadata": {
