Try new data preperation. model not working

--- a/transformer_decoder_training/jupyter_notebooks/understanding_transformers/Transformer_decoder_only/Transformer_decoder_v1.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/understanding_transformers/Transformer_decoder_only/Transformer_decoder_v1.ipynb
@@ -81,7 +81,7 @@
     "# SOS und EOS Tokens definieren\n",
     "\n",
     "# Define SOS and EOS tokens as global variables\n",
-    "SOS_TOKEN = np.full((1, 12), 1)  # SOS token representation with 2\n",
+    "SOS_TOKEN = np.full((1, 12), 1)  # SOS token representation with 1\n",
     "EOS_TOKEN = np.full((1, 12), 3)  # EOS token probably not neccessary since i use fixed length sequences\n",
     "\n",
     "UNK_IDX = 5 #Brauchen wir glaube ich nicht\n",
@@ -3678,6 +3678,9 @@
     "\n",
     "Potentielle Ursachen:\n",
     "\n",
+    "- Ich mache sehr wahrscheinlich einen Fehler beim Training mit memory und Target, da beim Decoder only ja der output vom letzten Step an den output angehängt und als input für den nächsten step verwendet wird. -> Autoregressiv\n",
+    "    - -> Wie soll ich dann die Vorhersage für die linke hand von der Rechten Hand machen? -> ist ja dann keine Übersetzung mehr, sondern Die Tokenvorhersage. Aber ich brauche ja die linke hand (+ evtl. rechte hand als input) -> und muss die Rechte hand vorhersagen. wie ist das dann mit der Vorhersage von nur der linken hand? -> oder doch lieber ganze sequenz vorhersagen \n",
+    "- Der Decoder only Transformer generiert normalerweise nur 1 Token auf einmal -> ich habe evtl falschen Ansatz\n",
     "- Ich mache generell irgendwo einen Fehler in der Transformerstruktur\n",
     "- Das training passt nicht für einen Encoder-decoder Only -> Ich mache ja nicht wirklich eine sequentielle vorhersage sondern versuche quasi eher eine Übersetzung -> von rechter auf linke hand\n",
     "- Die Snapshots müssen irgendwie anders tokenized werden. -> in allen textgenerierungstasks ist die eingabesquenz vor dem embedding geringer -> nur zahlen anstatt einem Vektor -> evtl. eigenen Tokenizer schreiben?\n",
