Refactor some files

--- a/transformer_decoder_training/jupyter_notebooks/evaluation/eval_v1.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/evaluation/eval_v1.ipynb
@@ -18,8 +18,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-26T18:32:12.647273Z",
-     "start_time": "2024-06-26T18:32:11.919578Z"
+     "end_time": "2024-06-27T11:33:21.190933Z",
+     "start_time": "2024-06-27T11:33:19.784389Z"
     }
    },
    "cell_type": "code",
@@ -40,8 +40,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-26T18:32:14.390087Z",
-     "start_time": "2024-06-26T18:32:12.649144Z"
+     "end_time": "2024-06-27T11:33:22.833003Z",
+     "start_time": "2024-06-27T11:33:21.192675Z"
     }
    },
    "cell_type": "code",
@@ -68,7 +68,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed dataset (40/40): 100%|██████████| 40/40 [00:01<00:00, 28.09it/s]\n"
+      "Processed dataset (40/40): 100%|██████████| 40/40 [00:01<00:00, 32.26it/s]\n"
      ]
     },
     {
@@ -92,8 +92,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-26T18:32:14.440765Z",
-     "start_time": "2024-06-26T18:32:14.390647Z"
+     "end_time": "2024-06-27T11:33:22.902224Z",
+     "start_time": "2024-06-27T11:33:22.833687Z"
     }
    },
    "cell_type": "code",
@@ -114,7 +114,8 @@
     "\n",
     "# see: https://pytorch.org/tutorials/beginner/basics/saveloadrun_tutorial.html#save-and-load-the-model\n",
     "model = Transformer(num_emb=88, num_layers=num_layers, hidden_size=hidden_size, num_heads=num_heads).to(device)\n",
-    "model.load_state_dict(torch.load(\"/home/falaxdb/Repos/minus1/transformer_decoder_training/jupyter_notebooks/piano_tests/saved_models/model_1_notebook_v5.pth\"))\n",
+    "model.load_state_dict(torch.load(\n",
+    "    \"/transformer_decoder_training/jupyter_notebooks/piano_training/saved_models/model_1_notebook_v5.pth\"))\n",
     "model.eval()\n"
    ],
    "id": "8bc5f412a399bc82",
@@ -159,6 +160,8 @@
     "\n",
     "Das Modell: `model_1_notebook_v5.pth` sagt nicht nur einen Token vorraus, sondern bei einem input von 513 Tokens werden auch 513 Vorhergesagt\n",
     "\n",
+    "-> Mit der model sagt token eins rechts von der src sequenz vorraus (wegen der Verschiebung beim Training)\n",
+    "\n",
     "evtl. weitere Infos: https://ai.stackexchange.com/questions/40140/how-is-the-next-token-predicted-in-transformers"
    ],
    "id": "e86e6d4afb525d9e"
@@ -166,15 +169,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-26T18:32:15.783829Z",
-     "start_time": "2024-06-26T18:32:14.441217Z"
+     "end_time": "2024-06-27T11:33:24.226098Z",
+     "start_time": "2024-06-27T11:33:22.902838Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from transformer_decoder_training.inference.inference_1 import inference\n",
     "\n",
-    "input_touple = data[300]\n",
+    "input_touple = data[250]\n",
     "input_seq = input_touple[0]\n",
     "input_seq = torch.tensor(input_seq).float().to(device)\n",
     "# input must be of shape (batch_dim, seq_length, feature_dim\n",
@@ -207,8 +210,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-26T18:32:15.834937Z",
-     "start_time": "2024-06-26T18:32:15.784545Z"
+     "end_time": "2024-06-27T11:33:24.277277Z",
+     "start_time": "2024-06-27T11:33:24.226799Z"
     }
    },
    "cell_type": "code",
@@ -236,8 +239,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-26T18:32:15.837734Z",
-     "start_time": "2024-06-26T18:32:15.835588Z"
+     "end_time": "2024-06-27T11:33:24.281788Z",
+     "start_time": "2024-06-27T11:33:24.278111Z"
     }
    },
    "cell_type": "code",
@@ -274,8 +277,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-26T18:32:16.077280Z",
-     "start_time": "2024-06-26T18:32:15.838119Z"
+     "end_time": "2024-06-27T11:33:24.547191Z",
+     "start_time": "2024-06-27T11:33:24.282734Z"
     }
    },
    "cell_type": "code",
