Try evaluation with a select song

--- a/transformer_decoder_training/jupyter_notebooks/evaluation/specific_test_midis/spilt_midi_files.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/evaluation/specific_test_midis/spilt_midi_files.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-24T18:40:24.750779Z",
-     "start_time": "2024-07-24T18:40:24.730958Z"
+     "end_time": "2024-07-24T19:18:51.312806Z",
+     "start_time": "2024-07-24T19:18:51.154187Z"
     }
    },
    "source": [
@@ -16,18 +16,20 @@
     "input_folder = \"/home/falaxdb/Repos/minus1/transformer_decoder_training/jupyter_notebooks/evaluation/specific_test_midis/split_tracks\"\n",
     "output_folder = \"/home/falaxdb/Repos/minus1/transformer_decoder_training/jupyter_notebooks/evaluation/specific_test_midis/split_into_mid\"\n",
     "\n",
-    "maestro_split_hands_into_midi.split_midi_tracks(input_folder, output_folder, True, 0)\n"
+    "# somehow the function does not correctly split the right_H track? Funktioniert evtl. nicht richtig mit signal.vercel dateien?\n",
+    "\n",
+    "maestro_split_hands_into_midi.split_midi_tracks(input_folder, output_folder, True,)\n"
    ],
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed dataset (1/1): 100%|██████████| 1/1 [00:00<00:00, 544.50it/s]\n"
+      "Processed dataset (1/1): 100%|██████████| 1/1 [00:00<00:00,  6.63it/s]\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 5
   }
  ],
  "metadata": {
