Test different input seq lengths

--- a/transformer_decoder_training/jupyter_notebooks/evaluation/specific_test_midis/eval_v5.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/evaluation/specific_test_midis/eval_v5.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-28T21:44:57.112410Z",
-     "start_time": "2024-07-28T21:44:55.961535Z"
+     "end_time": "2024-07-28T22:05:49.602514Z",
+     "start_time": "2024-07-28T22:05:48.403336Z"
     }
    },
    "cell_type": "code",
@@ -29,8 +29,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-28T21:44:57.242717Z",
-     "start_time": "2024-07-28T21:44:57.113285Z"
+     "end_time": "2024-07-28T22:05:49.809343Z",
+     "start_time": "2024-07-28T22:05:49.603303Z"
     }
    },
    "cell_type": "code",
@@ -57,8 +57,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-28T21:44:57.777990Z",
-     "start_time": "2024-07-28T21:44:57.243288Z"
+     "end_time": "2024-07-28T22:05:50.370326Z",
+     "start_time": "2024-07-28T22:05:49.810387Z"
     }
    },
    "cell_type": "code",
@@ -76,7 +76,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed dataset (2/2): 100%|██████████| 2/2 [00:00<00:00,  4.38it/s]"
+      "Processed dataset (2/2): 100%|██████████| 2/2 [00:00<00:00,  4.20it/s]"
      ]
     },
     {
@@ -99,8 +99,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-28T21:44:57.782786Z",
-     "start_time": "2024-07-28T21:44:57.778943Z"
+     "end_time": "2024-07-28T22:05:50.374452Z",
+     "start_time": "2024-07-28T22:05:50.371137Z"
     }
    },
    "cell_type": "code",
@@ -138,8 +138,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-28T21:44:57.847625Z",
-     "start_time": "2024-07-28T21:44:57.783311Z"
+     "end_time": "2024-07-28T22:05:50.439140Z",
+     "start_time": "2024-07-28T22:05:50.374864Z"
     }
    },
    "cell_type": "code",
@@ -202,8 +202,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-28T21:44:57.849828Z",
-     "start_time": "2024-07-28T21:44:57.848174Z"
+     "end_time": "2024-07-28T22:05:50.441171Z",
+     "start_time": "2024-07-28T22:05:50.439632Z"
     }
    },
    "cell_type": "code",
@@ -215,13 +215,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-28T21:44:58.857682Z",
-     "start_time": "2024-07-28T21:44:57.850266Z"
+     "end_time": "2024-07-28T22:05:51.503123Z",
+     "start_time": "2024-07-28T22:05:50.441667Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# inference with threshold\n",
+    "# inference with threshold and limited input seq\n",
+    "# limit = 513 Tokens\n",
     "\n",
     "from transformer_decoder_training.inference import inference_5\n",
     "\n",
@@ -229,7 +230,7 @@
     "\n",
     "generated_sequence = inference_and_visualize_1.combine_output_with_context(tokens_with_truth, context_seq)\n",
     "\n",
-    "inference_and_visualize_1.inference_output_to_midi_one_octave(original_seq, context_seq, generated_sequence, 0.05, midi_save_dir, \"limited_input_seq.mid\")\n"
+    "inference_and_visualize_1.inference_output_to_midi_one_octave(original_seq, context_seq, generated_sequence, 0.05, midi_save_dir, \"limited_input_seq_513.mid\")\n"
    ],
    "id": "d79328bb513fb2a",
    "outputs": [
@@ -241,11 +242,47 @@
       "Binary Tensors after concatinating:  torch.Size([512, 24])\n",
       "Binary Tensors after unsqueezing:  torch.Size([1, 512, 24])\n",
       "Context sequence + Generated tokens:  torch.Size([1, 1025, 24])\n",
-      "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/midi_outputs/notebook_6/6.1/limited_input_seq.mid\n"
+      "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/midi_outputs/notebook_6/6.1/limited_input_seq_513.mid\n"
      ]
     }
    ],
    "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-28T22:05:52.844627Z",
+     "start_time": "2024-07-28T22:05:51.503623Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# inference with threshold and limited input seq\n",
+    "# limit = 1024 Tokens\n",
+    "\n",
+    "from transformer_decoder_training.inference import inference_5\n",
+    "\n",
+    "tokens_with_truth, token_probs = inference_5.inference(model, context_seq, continuing_seq, 0.17, pad_token, 1024, device)\n",
+    "\n",
+    "generated_sequence = inference_and_visualize_1.combine_output_with_context(tokens_with_truth, context_seq)\n",
+    "\n",
+    "inference_and_visualize_1.inference_output_to_midi_one_octave(original_seq, context_seq, generated_sequence, 0.05, midi_save_dir, \"limited_input_seq_1024.mid\")"
+   ],
+   "id": "ea4f055216715921",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokens to generate: 512\n",
+      "Binary Tensors after concatinating:  torch.Size([512, 24])\n",
+      "Binary Tensors after unsqueezing:  torch.Size([1, 512, 24])\n",
+      "Context sequence + Generated tokens:  torch.Size([1, 1025, 24])\n",
+      "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/midi_outputs/notebook_6/6.1/limited_input_seq_1024.mid\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   }
  ],
  "metadata": {
