Experiment with Midi Tokenizer and different midi Programms for seperation

--- a/transformer_decoder_training/jupyter_notebooks/evaluation/eval_v5.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/evaluation/eval_v5.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:27:46.284925Z",
-     "start_time": "2024-07-31T23:27:45.037592Z"
+     "end_time": "2024-08-02T18:29:42.966360Z",
+     "start_time": "2024-08-02T18:29:40.931638Z"
     }
    },
    "cell_type": "code",
@@ -29,8 +29,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:27:46.413450Z",
-     "start_time": "2024-07-31T23:27:46.285778Z"
+     "end_time": "2024-08-02T18:29:43.132254Z",
+     "start_time": "2024-08-02T18:29:42.967139Z"
     }
    },
    "cell_type": "code",
@@ -57,8 +57,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:27:46.832341Z",
-     "start_time": "2024-07-31T23:27:46.414157Z"
+     "end_time": "2024-08-02T18:29:43.534325Z",
+     "start_time": "2024-08-02T18:29:43.132751Z"
     }
    },
    "cell_type": "code",
@@ -76,7 +76,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed dataset (2/2): 100%|██████████| 2/2 [00:00<00:00,  5.92it/s]"
+      "Processed dataset (2/2): 100%|██████████| 2/2 [00:00<00:00,  7.00it/s]"
      ]
     },
     {
@@ -99,8 +99,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:27:46.838004Z",
-     "start_time": "2024-07-31T23:27:46.833637Z"
+     "end_time": "2024-08-02T18:29:43.541239Z",
+     "start_time": "2024-08-02T18:29:43.535265Z"
     }
    },
    "cell_type": "code",
@@ -140,8 +140,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:27:46.901450Z",
-     "start_time": "2024-07-31T23:27:46.838656Z"
+     "end_time": "2024-08-02T18:29:43.609170Z",
+     "start_time": "2024-08-02T18:29:43.541918Z"
     }
    },
    "cell_type": "code",
@@ -204,8 +204,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:27:46.903673Z",
-     "start_time": "2024-07-31T23:27:46.902093Z"
+     "end_time": "2024-08-02T18:29:43.610881Z",
+     "start_time": "2024-08-02T18:29:43.609603Z"
     }
    },
    "cell_type": "code",
@@ -217,8 +217,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:27:49.662884Z",
-     "start_time": "2024-07-31T23:27:46.904133Z"
+     "end_time": "2024-08-02T18:29:46.425822Z",
+     "start_time": "2024-08-02T18:29:43.611789Z"
     }
    },
    "cell_type": "code",
@@ -253,8 +253,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:27:54.586945Z",
-     "start_time": "2024-07-31T23:27:49.663630Z"
+     "end_time": "2024-08-02T18:29:51.275226Z",
+     "start_time": "2024-08-02T18:29:46.426458Z"
     }
    },
    "cell_type": "code",
@@ -299,8 +299,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:27:54.633697Z",
-     "start_time": "2024-07-31T23:27:54.587517Z"
+     "end_time": "2024-08-02T18:29:51.324464Z",
+     "start_time": "2024-08-02T18:29:51.275669Z"
     }
    },
    "cell_type": "code",
@@ -357,8 +357,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:27:54.636006Z",
-     "start_time": "2024-07-31T23:27:54.634277Z"
+     "end_time": "2024-08-02T18:29:51.326714Z",
+     "start_time": "2024-08-02T18:29:51.325408Z"
     }
    },
    "cell_type": "code",
@@ -370,8 +370,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:27:57.286937Z",
-     "start_time": "2024-07-31T23:27:54.636844Z"
+     "end_time": "2024-08-02T18:29:54.022741Z",
+     "start_time": "2024-08-02T18:29:51.327087Z"
     }
    },
    "cell_type": "code",
@@ -406,8 +406,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:28:02.099610Z",
-     "start_time": "2024-07-31T23:27:57.287657Z"
+     "end_time": "2024-08-02T18:29:58.790937Z",
+     "start_time": "2024-08-02T18:29:54.023168Z"
     }
    },
    "cell_type": "code",
@@ -452,8 +452,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:28:02.146983Z",
-     "start_time": "2024-07-31T23:28:02.100068Z"
+     "end_time": "2024-08-02T18:29:58.841640Z",
+     "start_time": "2024-08-02T18:29:58.791479Z"
     }
    },
    "cell_type": "code",
@@ -510,8 +510,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:28:02.148777Z",
-     "start_time": "2024-07-31T23:28:02.147423Z"
+     "end_time": "2024-08-02T18:29:58.843558Z",
+     "start_time": "2024-08-02T18:29:58.842094Z"
     }
    },
    "cell_type": "code",
@@ -523,8 +523,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:28:04.833714Z",
-     "start_time": "2024-07-31T23:28:02.149183Z"
+     "end_time": "2024-08-02T18:30:01.481295Z",
+     "start_time": "2024-08-02T18:29:58.843901Z"
     }
    },
    "cell_type": "code",
@@ -572,8 +572,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:28:07.474629Z",
-     "start_time": "2024-07-31T23:28:04.834363Z"
+     "end_time": "2024-08-02T18:30:04.253018Z",
+     "start_time": "2024-08-02T18:30:01.481994Z"
     }
    },
    "cell_type": "code",
@@ -621,8 +621,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:28:07.895651Z",
-     "start_time": "2024-07-31T23:28:07.475302Z"
+     "end_time": "2024-08-02T18:30:04.633292Z",
+     "start_time": "2024-08-02T18:30:04.253465Z"
     }
    },
    "cell_type": "code",
@@ -2175,6 +2175,33 @@
    "execution_count": 17
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-02T18:30:39.138352Z",
+     "start_time": "2024-08-02T18:30:39.121777Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(generated_logits[0])\n",
+    "print(generated_logits[1])"
+   ],
+   "id": "322cbbbf0bdf3b4e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.0035,  0.0267,  0.0013,  0.9470,  0.0113,  0.0680,  0.0462,  0.0013,\n",
+      "          0.0302,  0.0127,  0.0358, -0.0189]], device='cuda:0')\n",
+      "tensor([[-0.0040,  0.0267,  0.0022,  0.9448,  0.0089,  0.0655,  0.0454,  0.0054,\n",
+      "          0.0258,  0.0063,  0.0355, -0.0241]], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "execution_count": 23
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
    "source": "# MAE Loss",
@@ -2183,8 +2210,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:28:10.522645Z",
-     "start_time": "2024-07-31T23:28:07.896088Z"
+     "end_time": "2024-08-02T18:30:07.246207Z",
+     "start_time": "2024-08-02T18:30:04.653619Z"
     }
    },
    "cell_type": "code",
@@ -2227,13 +2254,13 @@
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:28:10.964589Z",
-     "start_time": "2024-07-31T23:28:10.523502Z"
+     "end_time": "2024-08-02T18:30:07.356167Z",
+     "start_time": "2024-08-02T18:30:07.247269Z"
     }
    },
    "cell_type": "code",
@@ -3783,7 +3810,7 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 20
   },
   {
    "metadata": {},
@@ -3794,8 +3821,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:28:13.622379Z",
-     "start_time": "2024-07-31T23:28:10.965384Z"
+     "end_time": "2024-08-02T18:30:09.970094Z",
+     "start_time": "2024-08-02T18:30:07.357Z"
     }
    },
    "cell_type": "code",
@@ -3838,13 +3865,13 @@
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T23:28:13.770936Z",
-     "start_time": "2024-07-31T23:28:13.622938Z"
+     "end_time": "2024-08-02T18:30:10.045368Z",
+     "start_time": "2024-08-02T18:30:09.970683Z"
     }
    },
    "cell_type": "code",
@@ -5394,7 +5421,7 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 22
   }
  ],
  "metadata": {
