move loading to testing_helper_functions.py

--- a/transformer_decoder_training/jupyter_notebooks/piano_training/training_with_template.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_training/training_with_template.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "dataset_dir = \"/home/falaxdb/Repos/minus1/datasets/maestro_v3_split/hands_split_into_seperate_midis\"\n",
     "\n",
-    "import transformer_decoder_training.helper_functions as helper"
+    "import transformer_decoder_training.training_helper_functions as helper"
    ],
    "id": "2c1164f6f01c4865",
    "outputs": [],
